--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/TellTheTimeAdvanced.loader.js";
+      var loaderUrl = buildUrl + "/tell-the-time-advanced.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TellTheTimeAdvanced.data.unityweb",
-        frameworkUrl: buildUrl + "/TellTheTimeAdvanced.framework.js.unityweb",
-        codeUrl: buildUrl + "/TellTheTimeAdvanced.wasm.unityweb",
+        dataUrl: buildUrl + "/tell-the-time-advanced.data.unityweb",
+        frameworkUrl: buildUrl + "/tell-the-time-advanced.framework.js.unityweb",
+        codeUrl: buildUrl + "/tell-the-time-advanced.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "The Super Challenge",
         productName: "Tell The Time Advanced",
